# gmsv_colorize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
lua/autorun/: !colorize.lua
src/: CMakeLists.txt  main.cpp
